# Calorie-Expenditure-Prediction

./: README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: eda.ipynb
src/: data_loader.py  feature_engineering.py  preprocessing.py  settings.py
