[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Calorie-Expenditure-Prediction"
version = "0.1.0"
description = "A project to predict calorie expenditure during workouts"
authors = [
    { name="Sahil Barke", email="email@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "shap",
]
keywords = ["calorie", "fitness", "ml", "prediction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]
